force-app/main/default/objects/Stg_CRICOS_Code__c.object
<CustomObject>
    <fields>
        <fullName>Course_Code__c</fullName>
        <label>Course Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Version_Key__c</fullName>
        <label>Course Version Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Version__c</fullName>
        <label>Course Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Code__c</fullName>
        <label>Job Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Status__c</fullName>
        <label>Record Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Transformation__c</fullName>
        <formula>IF(Type__c = &apos;CRICOS&apos;,&apos;CRICOS&apos;,
IF(Type__c = &apos;CRICOS-EXC&apos;,&apos;CRICOS Exchange&apos;,
IF(Type__c = &apos;cricos&apos;,&apos;CRICOS&apos;,
IF(Type__c = &apos;cricos-exc&apos;,&apos;CRICOS Exchange&apos;,
&apos;invalid field&apos;))))</formula>
        <label>Type Transformation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Set_Code__c</fullName>
        <label>Unit Set Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Set_Version_Key__c</fullName>
        <label>Unit Set Version Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Set_Version__c</fullName>
        <label>Unit Set Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Stg CRICOS Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Course_Version_Key__c</columns>
        <columns>Unit_Set_Version_Key__c</columns>
        <columns>Unique_Key__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Job_Code__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Notes__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Record_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CRICOS</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stg CRICOS Codes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>